# xfem-amie

./: CMakeLists.txt  COPYING  Makefile  amie.lang  configuration.cpp  configuration.h  delaunay.cpp  delaunay.h  delaunay_3d.cpp  delaunay_3d.h  ellipse_6913.txt  main.cpp  main.h  main_3d.cpp  main_3d_diffusion.cpp  main_amor.cpp  main_elasticity_c3s.cpp  main_jerome.cpp  main_kill.cpp  main_multicrack.cpp  main_nurbs.cpp  main_periodic_c3s.cpp  main_rag.cpp  main_simple.cpp  main_viscoelasticity_c3s.cpp  matrixops.cpp  matrixops.h  parser.cpp  parser.h  placement.cpp  placement.h  samplingcriterion.cpp  samplingcriterion.h  sliceiters.h  sphere_3200.txt  test.txt
cmake/: sse3-test.cpp  sse4-test.cpp  tr1-test.cpp
elements/: elements.cpp  elements.h  generalized_spacetime_viscoelastic_element_state.cpp  generalized_spacetime_viscoelastic_element_state.h  integrable_entity.cpp  integrable_entity.h
examples/: CMakeLists.txt  main.cpp  main.h  main_2d_composite.cpp  main_3d.cpp  main_3d_asr.cpp  main_3d_benchmark.cpp  main_3d_diffusion.cpp  main_alain.cpp  main_amor.cpp  main_asr.cpp  main_asr_shape.cpp  main_asr_simple.cpp  main_asr_visco.cpp  main_back_homogenisation.cpp  main_benchmark.cpp  main_check_behaviour.cpp  main_check_mesh.cpp  main_check_test.cpp  main_cl.cpp  main_creep_homogenization.cpp  main_creep_homogenization_mic.cpp  main_crystal_pressure.cpp  main_cyrille.cpp  main_dam.cpp  main_def.cpp  main_detail.cpp  main_elasticity_c3s.cpp  main_elleuch.cpp  main_ellipse.cpp  main_ellipse_rag.cpp  main_ellipse_test.cpp  main_from_mic.cpp  main_from_mic_try.cpp  main_function_test.cpp  main_geometry.cpp  main_homogenization.cpp  main_hydrating_paste.cpp  main_irradiation.cpp  main_iterative.cpp  (+35 more)
features/: CMakeLists.txt  boundarycondition.cpp  boundarycondition.h  crack.cpp  crack.h  crackinitiation.cpp  crackinitiation.h  enrichmentInclusion.cpp  enrichmentInclusion.h  enrichmentInclusion3d.cpp  enrichmentInclusion3d.h  enrichmentRing.cpp  enrichmentRing.h  enrichmentbehaviour.cpp  enrichmentbehaviour.h  expansiveRing.cpp  expansiveRing.h  expansiveZone.cpp  expansiveZone.h  expansiveZone3d.cpp  expansiveZone3d.h  feature_base.cpp  feature_base.h  features.cpp  features.h  growingExpansiveZone.cpp  growingExpansiveZone.h  inclusion.cpp  inclusion.h  inclusion3d.cpp  inclusion3d.h  incompatibleModes.cpp  incompatibleModes.h  layeredinclusion.cpp  layeredinclusion.h  loftedPolygonSample3d.cpp  loftedPolygonSample3d.h  microstructuregenerator.cpp  microstructuregenerator.h  polygonSample.cpp  (+15 more)
features/enrichmentmanagers/: crackmanager.cpp  crackmanager.h  gelmanager.cpp  gelmanager.h
filters/: CMakeLists.txt  voxelfilter.cpp  voxelfilter.h  voxelporefilter.cpp  voxelporefilter.h
geometry/: CMakeLists.txt  geometry_2D.cpp  geometry_2D.h  geometry_3D.cpp  geometry_3D.h  geometry_base.cpp  geometry_base.h  geometry_with_exclusion.cpp  geometry_with_exclusion.h  level_set.cpp  level_set.h  space_time_geometry_2D.cpp  space_time_geometry_2D.h  sphere_mesh_1024  sphere_mesh_128  sphere_mesh_16384  sphere_mesh_2048  sphere_mesh_256  sphere_mesh_4096  sphere_mesh_512  sphere_mesh_8192
input_manager/: README  documentation.tex  input_manager.pro  main.cpp  path_to_executable.ini  tutorial.tex
mesher/: CMakeLists.txt  delaunay.cpp  delaunay.h  delaunay_3d.cpp  delaunay_3d.h  element_checker.cpp  element_checker.h  mesh.h  parallel_delaunay.cpp  parallel_delaunay.h  parallel_delaunay_3d.cpp  parallel_delaunay_3d.h  structuredmesh.cpp  structuredmesh.h
meta/: main_enum_translator.cpp  main_object_translator.cpp  update_meta.sh
physics/: CMakeLists.txt  ageing_logarithmic_creep.cpp  ageing_logarithmic_creep.h  damagemodel.h  diffusion.cpp  diffusion.h  dual_behaviour.cpp  dual_behaviour.h  finite_difference_viscoelasticity.cpp  finite_difference_viscoelasticity.h  fraction_stiffness_and_fracture.cpp  fraction_stiffness_and_fracture.h  fracturecriterion.cpp  fracturecriterion.h  generalized_fd_maxwell.cpp  generalized_fd_maxwell.h  generalized_spacetime_viscoelasticity.cpp  generalized_spacetime_viscoelasticity.h  homogeneised_behaviour.cpp  homogeneised_behaviour.h  isotropiclineardamage.cpp  isotropiclineardamage.h  kelvinvoight.cpp  kelvinvoight.h  laplacian.cpp  laplacian.h  lineardamage.cpp  lineardamage.h  linearstiffnessgradient.cpp  linearstiffnessgradient.h  logarithmic_creep.cpp  logarithmic_creep.h  logarithmic_creep_with_external_parameters.cpp  logarithmic_creep_with_external_parameters.h  mad.cpp  mad.h  mass.cpp  mass.h  maxstrain.cpp  maxstrain.h  (+82 more)
polynomial/: CMakeLists.txt  scalarfield.cpp  scalarfield.h  typeref.h  variable.h  vm_base.cpp  vm_base.h  vm_function_base.cpp  vm_function_base.h  vm_function_extra.cpp  vm_function_extra.h  vm_function_matrix.cpp  vm_function_matrix.h  vm_refcount_token.cpp  vm_refcount_token.h  vm_token.cpp  vm_token.h
solvers/: CMakeLists.txt  assembly.cpp  assembly.h  biconjugategradientstabilized.cpp  biconjugategradientstabilized.h  choleskidecomposed.cpp  choleskidecomposed.h  conjugategradient.cpp  conjugategradient.h  eigenvalues.cpp  eigenvalues.h  gausseidell.cpp  gausseidell.h  gaussseidellstep.cpp  gaussseidellstep.h  incompletecholeskidecomposition.cpp  incompletecholeskidecomposition.h  inversediagonal.cpp  inversediagonal.h  multigrid.cpp  multigrid.h  multigridstep.cpp  multigridstep.h  polakribiereconjugategradient.cpp  polakribiereconjugategradient.h  preconditionners.cpp  preconditionners.h  solver.cpp  solver.h  ssor.cpp  ssor.h  tridiagonal.cpp  tridiagonal.h
sparse/: CMakeLists.txt  sparse_matrix.cpp  sparse_matrix.h  sparse_vector.cpp  sparse_vector.h
utilities/: CMakeLists.txt  behaviour_converter.cpp  behaviour_converter.h  configuration.cpp  configuration.h  enumeration_translator.h  font.h  granulo.cpp  granulo.h  grid.cpp  grid.h  homogenizer.cpp  homogenizer.h  inclusion_family.cpp  inclusion_family.h  itoa.cpp  itoa.h  matrixops.cpp  matrixops.h  mineral.cpp  mineral.h  object_translator.cpp  object_translator.h  optimizer.cpp  optimizer.h  parser.cpp  parser.h  pid.cpp  pid.h  placement.cpp  (+14 more)
(+467 files in other folders)
